--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,7 @@ body {
   margin-top: 8px;
   border: 2px solid #d8d8d8;
   border-radius: 50%;
-  
 }
-
 
 .disabledButton {
   background-color: #d8d8d8;
@@ -105,7 +103,7 @@ li {
 }
 
 .out-of-stock-img {
-  opacity:0.5
+  opacity: 0.5;
 }
 
 p {
@@ -113,22 +111,28 @@ p {
 }
 
 .product-display {
-  display: flex;
+  display: initial;
   flex-direction: column;
   padding: 1rem;
 }
 
 .product-container {
+  max-width: 55rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  float: left;
 }
 
 .product-image,
 .product-info {
   width: 50%;
 }
-
+.main-review {
+  float: left;
+  padding-top: 11px;
+  width: 100%;
+}
 .review-form {
   display: flex;
   flex-direction: column;
@@ -181,16 +185,16 @@ ul {
   list-style-type: none;
 }
 
-.stockColor{
+.stockColor {
   color: green;
 }
 .outOfStock {
   text-decoration: line-through;
 }
-.disabledButton{
+.disabledButton {
   background-color: #e0e0e0;
 }
-.error{
+.error {
   width: 100%;
   /* background-color: rgb(136, 219, 133); */
   border: 1px solid red;
@@ -212,7 +216,7 @@ ul {
   background-color: orange;
   padding: 10px;
 }
-.review{
+.review {
   margin: 20px;
   width: 50%;
   padding: 20px;
@@ -232,4 +236,60 @@ ul {
   .review-form {
     width: 90%;
   }
+}
+
+header {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  margin: 0rem auto;
+  border-radius: 10px;
+  padding: 1px 12px;
+  background-color: #4fc08d;
+  color: white;
+  text-align: center;
+  width: 90%;
+  max-width: 40rem;
+  font-size: 7px;
+}
+#user-goal h2 {
+  font-size: 12px;
+  border-bottom: 4px solid #ccc;
+  color: #4fc08d;
+  margin: 0 0 1rem 0;
+}
+
+#user-goal p {
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 25px;
+  text-align: center;
+}
+
+#user-goal ul {
+  list-style: none;
+  margin: 1rem 0;
+  padding: 0;
+}
+
+#user-goal li {
+  margin: 0.2rem 0;
+  background-color: #8ddba4;
+  width: 100%;
+  color: #1f1f1f;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 25px;
+}
+.red {
+  background: #f92d2dde;
+  border: 2px solid #ff0000de;
+}
+.mr-new {
+  margin: 0 40px;
+  float: left;
+  mar
 }
